# MetaENCODE

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  app.py  architecture.md  encode.yml  implement1.txt  precompute_45989551.out  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.txt  time_analysis.txt  times.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: IMPLEMENTATION_LOG.md  coverage-todo.md  implementation-2.md
scripts/: analyze_commit_time.py  commits.txt  compare_vocabularies.py  encode_facets_raw.json  explore_cached_data.py  explore_encode_assays.py  fetch_encode_facets.py  generated_vocabularies.py  setup.sh  validate_and_order_vocabularies.py  validate_encode_params.py
src/: __init__.py
src/api/: encode_client.py
src/ml/: __init__.py  embeddings.py  feature_combiner.py  similarity.py
src/processing/: encoders.py  metadata.py
src/ui/: __init__.py  autocomplete.py  search_filters.py  vocabularies.py
src/utils/: cache.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_encode_client.py
tests/test_ml/: __init__.py  test_feature_combiner.py  test_similarity.py
tests/test_processing/: __init__.py  test_encoders.py  test_metadata.py
tests/test_ui/: test_autocomplete.py  test_search_filters.py  test_vocabularies.py
tests/test_utils/: test_cache.py  test_spell_check.py
