# meta-encode/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-encode"
version = "0.1.0"
description = "ENCODE dataset similarity search using ML-based recommendations"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DS3 x UBIC Team"}
]
keywords = ["ENCODE", "bioinformatics", "similarity", "embeddings", "streamlit"]

[project.urls]
Homepage = "https://github.com/your-org/meta-encode"
Repository = "https://github.com/your-org/meta-encode"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "data"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]
